[project]
name = "ComfyUI-FitDiTx"
description = "ComfyUI implementation of 'FitDiT: Advancing the Authentic Garment Details for High-fidelity Virtual Try-on'"
version = "1.0.2"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "pillow",
    "torch",
    "opencv-python",
    "torchvision",
    "onnxruntime",
    "matplotlib",
    "einops",
    "huggingface_hub",
    "scikit-image",
    "diffusers",
    "transformers",
    "accelerate"
]

[project.urls]
Repository = "https://github.com/ihmily/ComfyUI-FitDiTx"
# Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hmily"
DisplayName = "ComfyUI-FitDiTx"
Icon = ""